# trevaka

./: .env  .git-blame-ignore-revs  .gitignore  .gitmodules  README.md  REUSE.toml  add-license-headers.sh  docker-compose.yml  ecosystem.config.js  mise.toml
.circleci/: config.yml
.github/: dependabot.yml
.reuse/: dep5
auth/: .dockerignore  Dockerfile  README.md  theme-fi.sed
compose/: .env  compose-e2e  docker-compose-auth.yml  docker-compose-dbs.yml  docker-compose.e2e-tests.yml  docker-compose.e2e.yml  docker-compose.yml  ecosystem.config.js  test-e2e  (+2 more)
infra/: mise.toml  parameter-store.sh  pyproject.toml  update-sfi-idp-certs.py
infra/deploy/: .terraform.lock.hcl  README.md  datadog.tf  evaka-apigw.tf  evaka-frontend.tf  evaka-service.tf  keycloak.tf  main.tf  maintenance-mode.tf  mise.toml  s3-sfi-idp-certs.tf  service-discovery.tf  variables.tf
infra/deploy/modules/datadog/: alb.tf  ecs.tf  main.tf  outputs.tf  route53.tf  variables.tf
infra/deploy/modules/ecs_service/: alb.tf  ecs.tf  outputs.tf  route53.tf  variables.tf
infra/deploy/variables/: hameenkyro-prod-apps.tfvars  hameenkyro-test-apps.tfvars  kangasala-prod-apps.tfvars  kangasala-test-apps.tfvars  lempaala-prod-apps.tfvars  lempaala-test-apps.tfvars  nokia-prod-apps.tfvars  nokia-test-apps.tfvars  orivesi-prod-apps.tfvars  orivesi-test-apps.tfvars  pirkkala-prod-apps.tfvars  pirkkala-test-apps.tfvars  tampere-dev-apps.tfvars  tampere-prod-apps.tfvars  tampere-test-apps.tfvars  vesilahti-prod-apps.tfvars  vesilahti-test-apps.tfvars  ylojarvi-prod-apps.tfvars  ylojarvi-test-apps.tfvars
(+852 files in other folders)
